# pdbstruct

./: .gitignore  README.md  pyproject.toml
doc/: binding.html  channel.html  index.html  myoglobin.html
examples/: 9a9m.cif
src/pdbstruct/: asa.py  bgrid.py  cli.py  hollow.config.txt  hollow.defaults.txt  hollow.py  parse.py  soup.py  spacehash.py  store.py  util.py  vector3d.py  volume.py
tests/: test_vector3d.py
