[project]
name = "pdbstruct"
version = "2.0"
description = "python software to display protein channels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.1",
]

[project.scripts]
hollow = "pdbstruct.hollow:main"
hollow-asa = "pdbstruct.asa:main"
hollow-vol = "pdbstruct.volume:main"

[tool.uv]
package = true
