[project]
name = "pdbstruct"
version = "2.0"
description = "python software to display protein channels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "tqdm>=4.67.1",
]

[project.scripts]
hollow = "pdbstruct.hollow:main"
pdbstruct = "pdbstruct.cli:cli"

[tool.uv]
package = true
