[project]
name = "pdbstruct"
version = "0.1"
description = "python software to display protein channels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "tqdm>=4.67.1",
]

[project.scripts]
hollow = "pdbstruct.hollow:main"
pdbstruct = "pdbstruct.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

